[package]
name = "strong"
version = "0.2.2"
authors = ["octaltree <octaltree@gmail.com>"]
edition = "2018"
description = "Strongly typed String"
license = "MIT"
documentation = "https://docs.rs/strong/"
repository = "https://github.com/octaltree/strong"
categories = ["rust-patterns", "web-programming"]
keywords = ["validation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.12.0", optional = true, default-features = false }
thiserror = { version = "^1", optional = true, default-features = false }
diesel = { version = "^1", optional = true, default-features = false }
serde = { version = "^1", optional = true, default-features = false }
juniper = { version = "0.15.3", optional = true }

[features]
default = []
some_validators = ["validator", "thiserror"]
shorthand = []

[package.metadata.docs.rs]
features = ["some_validators"]
